# clean-architecture-api-restplus-flask

./: .gitignore  .pylintrc  1-init.sql  Dockerfile  Pipfile  README  README.md  docker-compose.yml  flask-db.sh  pytest.ini  run.py  setup.cfg  setup.py  tox.ini
apis/: book_api.py
app/: __init__.py
app/v1/: __init__.py
app/v1/adapters/: __init__.py  book_adapter.py
core/: __init__.py
core/adapters/: __init__.py  base_adapter.py
core/entities/: __init__.py  book_entity.py
core/instances/: develop_v1.json  master_v1.json  test_v1.json
core/repository/: __init__.py  base_repository.py  book_repository.py
core/startup/: __init__.py
core/usecases/: __init__.py  book_usecase.py
core/utils/: __init__.py
tests/: conftest.py  mocked_books_formated.py  mocked_books_json.py
tests/adapters/unit/: test_adapter_unit.py
tests/apis/component/: test_book_api_component.py
tests/apis/unit/: test_book_api_unit.py
tests/repository/integration/: test_book_repository_integration.py
tests/repository/unit/: test_book_repository_unit.py
tests/usecases/integration/: test_book_usecases_integration.py
tests/usecases/unit/: test_usecases_unit.py
