[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    tests
    tests/*
    tox.ini

[metadata]
name=test_pyramid_flask_example
version=1.0.0
description=Project poc tests
url=
author=Vitor
author_email=vitornascimentoaraujo@gmail.com
license=MIT
include_package_data=True
classifiers=
        Development Status :: 3 - Alpha
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3.5
zip_safe=False

[nosetests]
nologcapture=1